<resources>
    <string name="app_name">Auth</string>
    <string name="move_with_new">Start moving with \nthe new</string>
    <string name="hint_mobile_number">Enter Your Mobile number</string>
    <string name="one_time_password">One-Time Password</string>

    <string name="otp_confirm_formatter">Kindly Check Your Phone %s for your OTP</string>
    <string name="button_confirm">Confirm</string>
    <string name="next_button_text">Next</string>
    <string name="resend_pin_text">Resend Pin</string>
    <string name="button_done">Done</string>
    <string name="set_up_your_account_text">Set up your account</string>
    <string name="upload_profile_image_text">Upload Profile Image</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="otp_text">OTP</string>
    <string name="call_me_text">Call me</string>
    <string name="hint_email">Email</string>
    <string name="reg_hint_mobile_number">Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer mollisus.</string>
    <string name="button_skip_text">Skip</string>
    <string name="button_finish_text">Finish</string>
    <string name="mobile_number_text">Mobile Number</string>
    <string name="nigeria_format">+234</string>
    <string name="none">none</string>
    <string name="btn_get_started_text">Get Started</string>
    <string name="btn_sure_go_ahead_text">Sure, go ahead!</string>
    <string name="enjoy_life_text">Are you ready to enjoy a\nlife without limits?</string>
</resources>
