<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.gokada.ng.auth.presentation.onetimepassword.OneTimePasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/gokada_super_app_big_guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/gokada_super_app_big_guideline" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView3"
            style="@style/GokadaSuperAppText.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/auth_margin_top"
            android:text="@string/one_time_password"
            app:layout_constraintEnd_toEndOf="@id/rightGuide"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHelperText"
            style="@style/GokadaSuperAppText"
            android:layout_width="0dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="@string/otp_confirm_formatter" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOtpTimer"
            style="@style/GokadaSuperAppText"
            android:layout_width="wrap_content"
            android:layout_marginStart="23dp"
            android:text="@{viewModel.timeString}"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView2"
            app:layout_constraintEnd_toStartOf="@+id/centerGuideline"
            app:layout_constraintStart_toEndOf="@+id/appCompatTextView2"
            app:layout_constraintTop_toTopOf="@+id/appCompatTextView2"
            tools:text="04:23Min" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/call_me_btn"
            style="@style/GokadaAuthBorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_me_text"
            android:textColor="@color/colorPrimary"
            app:icon="@drawable/ic_telephone"
            app:layout_constraintBottom_toBottomOf="@+id/tvOtpTimer"
            app:layout_constraintStart_toEndOf="@+id/centerGuideline"
            app:layout_constraintTop_toTopOf="@+id/tvOtpTimer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            style="@style/GokadaSuperAppText"
            android:layout_width="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/resend_pin_text"
            android:textColor="@color/faint_text_color"
            app:layout_constraintEnd_toStartOf="@+id/tvOtpTimer"
            app:layout_constraintStart_toStartOf="@+id/leftGuide"
            app:layout_constraintTop_toBottomOf="@+id/tvHelperText" />

        <com.mukesh.OtpView
            android:id="@+id/otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:inputType="number"
            app:itemCount="5"
            app:itemSpacing="16dp"
            app:itemWidth="27dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/call_me_btn"
            app:lineColor="@android:color/black"
            app:viewType="line" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            style="@style/GokadaAuthButton"
            android:layout_width="0dp"
            android:layout_marginBottom="@dimen/auth_margin_bottom"
            android:padding="20dp"
            android:enabled="@{viewModel.showConfirmButton}"
            android:text="@string/button_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/rightGuide"
            app:layout_constraintStart_toStartOf="@id/leftGuide" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/centerGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>